@@ -1,6 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.3.8:
+  * minor incompatible change: NAMESTRING prefers to return a BASE-STRING
+    instead of (ARRAY CHARACTER (*)) when possible.
   * enhancement: cached make-instance/allocate-instance constructors can now
     get garbage collected. 
   * optimization: better performance for some unoptimized operations on
